feat: skills bwowsing

--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,57 @@
   font-size: xx-large;
   font-weight: bold;
 }
+
+.section-content-container {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: center;
+  align-items: center;
+}
+
+.page-title {
+  font-size: 3em;
+  font-weight: bold;
+  margin-bottom: 25px;
+}
+
+/* HealthBar.css */
+.xp-bar {
+  width: 12vh;
+  height: 2.5vh;
+  background-color: #33333342;
+  border: 1px solid #000;
+  position: relative;
+}
+
+.xp-bar-fill {
+  height: 100%;
+  background-color: rgba(0, 255, 0, 0.681); /* Green color for health */
+  transition: width 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+.xp-text {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  line-height: 2vh;
+  color: #fff;
+  font-weight: bold;
+}
+
+.skill {
+  max-width: '5vh';
+  position: relative;
+  top: 0;
+  left: 46%;
+  transform: translateX(-50%);
+  line-height: 2vh;
+  font-weight: bold;
+  box-shadow: 'dark-lg';
+  border-radius: 10px;
+
+  background-color: rgba(161, 11, 62, 0.1);
+}
